src/infrastructure/deployments/guardian/imageops/renovate.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate
  namespace: guardian-imageops
  labels:
    app.kubernetes.io/name: renovate
    app.kubernetes.io/part-of: guardian
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: renovate
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tenant-root
            k8s:app.kubernetes.io/name: vminsert
      toPorts:
        - ports:
            - port: "8480"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tenant-root-vminsert-from-renovate
  labels:
    app.kubernetes.io/name: renovate
    app.kubernetes.io/part-of: guardian
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: tenant-root
      k8s:app.kubernetes.io/name: vminsert
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: guardian-imageops
            k8s:app.kubernetes.io/name: renovate
      toPorts:
        - ports:
            - port: "8480"
              protocol: TCP
